# SomeBak

./: README.md  SomeBak.py
code/: CMakeLists.txt  SomeBak.py
code/SomeBak/: CMakeLists.txt
code/SomeBak/src/: Archive.hh  Archive.hpp  Archive.hxx  ArchiveDatabase.hh  ArchiveDatabase.hpp  ArchiveDatabase.hxx  FileArtefact.hh  FileArtefact.hpp  FileArtefact.hxx  Program.cpp  Program.hh  Program.hpp  Program.hxx  RuleDatabase.cpp  RuleDatabase.hh  RuleDatabase.hpp  RuleDatabase.hxx  Utility.cpp  Utility.hpp  Utility.hxx  common.hpp  main.cpp
test/: unit.py
test/data/copyOnce/: file1
test/data/copyOnce/subdir/: file2  file3
